Broke the ExperienceEditor for the Link with so many changes, so I needed to override that object and command as well. Cannibalising the existing EditLink command and will begin refactors shortly.

--- a/src/Feature/Test/code/Views/Test/Index.cshtml
+++ b/src/Feature/Test/code/Views/Test/Index.cshtml
@@ -21,5 +21,18 @@
     <div>
         @Html.Sitecore().Field("Four", Model.Item ?? Model.PageItem, new { @id = "FUCKYEAHAGAIN!" })
     </div>
+
+
+    <div>
+        @Html.Sitecore().Field("GeneralOne", Model.Item ?? Model.PageItem, new { @id = "GeneralFuck!" })
+        
+
+    </div>
+
+    <div>
+        @Html.Sitecore().Field("GeneralTwo", Model.Item ?? Model.PageItem)
+
+
+    </div>
 }
 
